Ejercicio HTML con css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Juegos GOTY del año</title>
 </head>
 <center><h1>Juegos GOTY del año</h1></center>
 <h1>Rocket League</h1>
-<p>Rocket League es un videojuego que combina el fútbol con los vehículos. Fue desarrollado por Psyonix El juego se lanzó por primera vez para PlayStation 4 y Windows en julio de 2015, y más tarde se lanzaron ports para Xbox One y Nintendo Switch. En junio de 2016, 505 Games comenzó a distribuir una versión física minorista para PlayStation 4 y Xbox One, y Warner Bros. Interactive Entertainment se hizo cargo de esas funciones a finales de 2017; También se lanzaron versiones para macOS y Linux en 2016, pero el soporte para los servicios en línea se abandonaron en 2020. El juego pasó a ser free to play en septiembre de 2020, cuando Epic Games tomó posesión.</p>
+<p>Rocket League es un videojuego que combina el fútbol con los vehículos. <strong>Fue desarrollado por Psyonix</strong> El juego se lanzó por primera vez para PlayStation 4 y Windows en julio de 2015, y más tarde se lanzaron ports para Xbox One y Nintendo Switch. En junio de 2016, 505 Games comenzó a distribuir una versión física minorista para PlayStation 4 y Xbox One, y Warner Bros. Interactive Entertainment se hizo cargo de esas funciones a finales de 2017; También se lanzaron versiones para macOS y Linux en 2016, pero el soporte para los servicios en línea se abandonaron en 2020. El juego pasó a ser free to play en septiembre de 2020, <strong>cuando Epic Games tomó posesión.</strong></p>
 <center><img src="./Imágenes/game.jpg" alt="Rocket League" width="500" height="500" ></center>
 <h1>Dragon Ball Sparking Zero</h1>
 <p>El juego fue anunciado por primera vez el 5 de marzo de 2023 durante el evento Dragon Ball Games Battle Hour 2023[1], donde fue mostrado un pequeño avance en el que se puede ver una pequeña recapitulación de los juegos anteriores de la serie Budokai Tenkaichi, que luego corta a una cinemática de Son Goku transformándose en Supersaiyano Azul tras la cual se muestra el mensaje «Un nuevo Budokai Tenkaichi comienza».</p>
 <center><img src="./Imágenes/game2.webp" alt="Dragon Ball Sparking Zero" width="500" height="500"></center>
 <body>
-
 </body>
 </html>
