--- a/Tarea1_P1/index.html
+++ b/Tarea1_P1/index.html
@@ -14,7 +14,7 @@
             </center>
         </header>
         <nav class="home">
-            Home | <a href="index2.html">Rocket League</a> | <a href="portafolio.html">Portafolio</a>
+            Home | <a href="index2.html">Rocket League</a> | <a href="portafolio.html">Portafolio | <a href="tablas.html">Tablas</a>
         </nav>
         Busqueda: <input type="text" id="buscar" name="buscar">
         <button id="botonBuscar">Buscar</button>
@@ -35,6 +35,7 @@
         <button id="botonGuardar">Guardar</button>
         </div>
         <section>
+            <div>
             <h1 class="juego">Rocket League</h1>
             <p>Rocket League es un videojuego que combina el fútbol con los vehículos. <strong>Fue desarrollado por Psyonix</strong> 
             El juego se lanzó por primera vez para <span class="clasespan">PlayStation 4</span> y Windows en julio de 2015, y más tarde se lanzaron ports para Xbox 
@@ -56,9 +57,12 @@
                     </figure>
             </center></a>
             <button class="boton">Visitar Pagina</button>
-
+        </div>
             <aside class="seccionRocket">
-                <p>¿Sabías que Rocket League originalmente se llamó Supersonic Acrobatic Rocket-Powered Battle-Cars?</p>
+                <div>
+                    <p>¿Sabías que Rocket League originalmente se llamó Supersonic Acrobatic Rocket-Powered Battle-Cars?</p>
+
+                </div>
             </aside>
 
         </section>
