Tarea de Deber2

--- a/P1U1/login.html
+++ b/P1U1/login.html
@@ -16,7 +16,11 @@
         <br>
         <input type="text" id="password" placeholder="Password" >
         <br>
+        <input type="checkbox" name="" id="">
+        <label for="Remember Password"></label>
+        <br>
         <input type="submit" placeholder="Login">
+        
     </form>
     </div>
 </body>
