--- a/P1U1/tienda.html
+++ b/P1U1/tienda.html
@@ -7,6 +7,7 @@
     <title>Tienda de Telefonos Inteligentes</title>
 </head>
 <body>
+    <div class="principal">
     <header class="cabezera">
         <center>
         <h1 class="titulo">Tienda Virtual</h1>
@@ -20,6 +21,7 @@
         <a href="#contacto">Contacto</a>
         </center>
     </nav>
+</div>
     <div class="container">
         <aside class="panel">
             <div>
@@ -76,6 +78,7 @@
             </center>
         </section>
     </div>
+    <div class="panel3">
     <aside class="chatbot">
         <header class="chatbot-header">
             <span>Servicio al Cliente</span>
@@ -86,12 +89,13 @@
             </center>
         </figure>
         <div class="chatbot-body">
-            <p>¡Hola! ¿En qué puedo ayudarte?</p>
+            <p class="chatbot-text">¡Hola! ¿En qué puedo ayudarte?</p>
             <textarea placeholder="Escribe tu mensaje..."></textarea>
             <center>
             <button class="btn-categoria">Enviar</button>
         </center>
     </aside>
+    </div>
     </div>
     <footer class="pie">
         <center>
