Actividad2 en clase

--- a/D2U1/index.html
+++ b/D2U1/index.html
@@ -12,8 +12,8 @@
             <img class="imagen1"src="./image/19264000_000.jpg" alt="" >
         </div>
         <div class="card-body" id="contenido">
-            <div class="card-initial-content">
-                <h2 id="titulo">Adidas Originals</h2>
+            <div class="card-initial-content" id="titulo">
+                <h2 >Adidas Originals</h2>
                 <p class="price">$39</p>
             </div>
             <div class="card-content">
